--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
   <packaging>pom</packaging>
 
   <name>Wave In A Box</name>
+  <url>http://incubator.apache.org/wave/</url>
+  <description>Wave In A Box is a self contained reference implementation of Wave.</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,6 +21,10 @@
     <socketio.version>0.1-SNAPSHOT</socketio.version>
     <guice.version>3.0</guice.version>
   </properties>
+
+  <prerequisites>
+    <maven>3.0</maven>
+  </prerequisites>
 
   <modules>
     <module>proto</module>
@@ -245,6 +251,16 @@
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.8.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
           <version>2.1.2</version>
           <executions>
@@ -261,7 +277,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>2.5.1</version>
           <configuration>
             <source>${java.version}</source>
             <target>${java.version}</target>
@@ -276,6 +292,21 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-antrun-plugin</artifactId>
           <version>1.7</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>2.5</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.7</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>2.3.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -300,15 +331,16 @@
           <version>2.4.0</version>
         </plugin>
         <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>**/*GwtTest*.java</exclude>
-            <exclude>**/*LargeTest.java</exclude>
-          </excludes>
-        </configuration>
-      </plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.12</version>
+          <configuration>
+            <excludes>
+              <exclude>**/*GwtTest*.java</exclude>
+              <exclude>**/*LargeTest.java</exclude>
+            </excludes>
+          </configuration>
+        </plugin>
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
@@ -367,6 +399,24 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-descriptor</id>
+            <goals>
+              <goal>attach-descriptor</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>1.3.1</version>
+      </plugin>
+    </plugins>
   </build>
 
   <profiles>
@@ -381,7 +431,8 @@
               <execution>
                 <id>gwt-tests</id>
                 <configuration>
-                  <!-- This is needed to overried the default excludes defined above. -->
+                  <!-- This is needed to overried the default excludes defined 
+                    above. -->
                   <excludes>
                   </excludes>
                   <includes>**/*GwtTest*.java</includes>
@@ -407,7 +458,8 @@
               <execution>
                 <id>large-tests</id>
                 <configuration>
-                  <!-- This is needed to overried the default excludes defined above. -->
+                  <!-- This is needed to overried the default excludes defined 
+                    above. -->
                   <excludes>
                     <exclude></exclude>
                   </excludes>
@@ -425,6 +477,74 @@
       </build>
     </profile>
   </profiles>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.4</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.12</version>
+      </plugin>
+    </plugins>
+  </reporting>
+
+  <organization>
+    <name>Apache Software Foundation</name>
+    <url>http://www.apache.org</url>
+  </organization>
+
+  <issueManagement>
+    <system>Jira</system>
+    <url>https://issues.apache.org/jira/browse/WAVE</url>
+  </issueManagement>
+
+  <mailingLists>
+    <mailingList>
+      <name>Wave Developer List</name>
+      <post>wave-dev@incubator.apache.org</post>
+      <subscribe>wave-dev-subscribe@incubator.apache.org</subscribe>
+      <unsubscribe>wave-dev-unsubscribe@incubator.apache.org</unsubscribe>
+      <archive>http://mail-archives.apache.org/mod_mbox/incubator-wave-dev/</archive>
+    </mailingList>
+    <mailingList>
+      <name>Wave Commits List</name>
+      <post>wave-commits@incubator.apache.org</post>
+      <subscribe>wave-commits-subscribe@incubator.apache.org</subscribe>
+      <unsubscribe>wave-commits-unsubscribe@incubator.apache.org</unsubscribe>
+      <archive>http://mail-archives.apache.org/mod_mbox/incubator-wave-commits/</archive>
+    </mailingList>
+  </mailingLists>
+
+  <ciManagement>
+    <system>Jenkins</system>
+    <url>https://builds.apache.org/job/wave-all_tests/</url>
+  </ciManagement>
+
+  <scm>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/incubator/wave/trunk</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/incubator/wave/trunk</developerConnection>
+    <url>http://svn.apache.org/viewvc/incubator/wave/</url>
+  </scm>
+
+  <licenses>
+    <license>
+      <name>Apache 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+    </license>
+  </licenses>
+
+  <distributionManagement>
+    <site>
+      <id>wave.website</id>
+      <name>Apache Wave MAven Site</name>
+      <url>scp://beaver.codehaus.org/home/projects/mojo/public_html/</url>
+    </site>
+  </distributionManagement>
 
   <pluginRepositories>
     <pluginRepository>
@@ -449,8 +569,7 @@
     <repository>
       <id>google-releases</id>
       <name>Google Maven Repository</name>
-      <url>http://oss.sonatype.org/content/repositories/google-releases/
-            </url>
+      <url>http://oss.sonatype.org/content/repositories/google-releases/</url>
     </repository>
     <repository>
       <id>protostuff-repo</id>
